chore(refecto): migration all from models to domains
